@@ -1,3 +1,7 @@
+* Jun 27 2001 dsolis
+wap
+- Add hello wml example
+
 * Jun 25 2001 hship
 
 VlibBeans:
